# apex-game-engine

./: .clang-format  .git-ignore  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  TODO.md  compileAndRun  debugRun
engine/: CMakeLists.txt  engine.hpp
engine/assets/: font.cpp  font.hpp  image.cpp  image.hpp  shader_source.cpp  shader_source.hpp
engine/core/: application.cpp  application.hpp  cursor.hpp  entry_point.cpp  entry_point.hpp  keyboard.hpp  layer.hpp  mouse.hpp  window.hpp
engine/entity_component_system/: component.hpp  entity.hpp  scene.cpp  scene.hpp  scene_serializer.cpp  scene_serializer.hpp  system.cpp  system.hpp
engine/platform/: platform.hpp
engine/platform/linux/: linux_window.cpp  linux_window.hpp  platform.cpp
engine/platform/opengl/: opengl_command.cpp  opengl_command.hpp  opengl_frame_buffer.cpp  opengl_frame_buffer.hpp  opengl_index_buffer.cpp  opengl_index_buffer.hpp  opengl_shader.cpp  opengl_shader.hpp  opengl_texture.cpp  opengl_texture.hpp  opengl_vertex_buffer.cpp  opengl_vertex_buffer.hpp
engine/renderer/: camera.cpp  camera.hpp  command.hpp  font_library.cpp  font_library.hpp  frame_buffer.hpp  index_buffer.hpp  mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  shader.hpp  text_renderer.cpp  text_renderer.hpp  texture.hpp  texture_library.cpp  texture_library.hpp  types.cpp  types.hpp  vertex_buffer.hpp
engine/renderer/shader/: box.frag  box.vert  circle.frag  circle.vert  sprite.frag  sprite.vert  text.frag  text.vert
engine/scene/: component.hpp  entity.hpp  scene.cpp  scene.hpp  scene_serializer.cpp  scene_serializer.hpp  script.hpp  system.cpp  system.hpp
engine/scripting/angelscript_2.36.1/sdk/samples/include/source/: main.cpp
engine/utility/: macro.hpp  time.cpp  time.hpp  timer.cpp  timer.hpp
project/: CMakeLists.txt
project/CppIde/: cppide.cpp
project/circuit/: circuit.cpp  editor_layer.cpp  editor_layer.hpp
project/circuit/res/: circuit.frag  circuit.vert  font.frag  font.vert
project/editor/: editor.cpp  editor.hpp  player.cpp  player.hpp
project/test/: editor.cpp  editor.hpp  imgui.ini  main.cpp  main.scene.json  test.cpp
project/test/res/: shader.frag  shader.vert
